# lab1-is

./: ontology.owl  pom.xml
RPP_MPI/: CMakeLists.txt  main.cpp
RPP_OpenMP/: CMakeLists.txt  main.cpp
src/main/java/org/example/: Main.java
